# gesep

./: .env  README.md  add_temperatura_column.py  add_temperatura_columns.py  check_db.py  fix_temp_pv.py  fix_temperatura_null.py  fix_temperatura_scale.py  migrate_db.py  pyproject.toml
app/: database.py  extract_ui.html  main.py  models.py  schemas.py
esp32_client/: esp32_client.ino
tests/: simulate_esp32.py
